--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ go:
   - 1.7
   - tip
 
-install:
-  - go get -u github.com/golang/lint/golint
+#install:
+#  - go get -u github.com/golang/lint/golint
 
 script:
-  - golint ./...
+#  - golint ./...
   - go test -v ./...
