--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: go
 
 go:
   - stable
+  - 1.14.x
+  - 1.13.x
+  - 1.12.x
   - 1.11.x
   - 1.10.x
   - 1.9.x
@@ -11,5 +14,5 @@ install:
   - go get -u golang.org/x/lint/golint
 
 script:
-  - golint ./...
-  - go test -v ./...
+  - golint ./v1
+  - go test -v ./v1
