--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -10,14 +10,14 @@ jobs:
       matrix:
         go: [ 'stable', '1.14', '1.13', '1.12', '1.11', '1.10', '1.9' ]
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Go
-      - uses: actions/setup-go@v2
+      - uses: actions/checkout@v2
+      - name: Set up Go
+        uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
-    - name: Install Lint
-      run: go get -u golang.org/x/lint/golint
-    - name: Execute Lint
-      run: golint ./v1
-    - name: Execute Test
-      run: go test -v ./v1
+      - name: Install Lint
+        run: go get -u golang.org/x/lint/golint
+      - name: Execute Lint
+        run: golint ./v1
+      - name: Execute Test
+        run: go test -v ./v1
