--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -9,12 +9,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@master
+      - name: Setup Go
+        uses: actions/checkout@master
+        with:
+          go-version: "1.21"
 
       - name: lint
         run: |
-          go get -u golang.org/x/lint/golint &&
-          $HOME/go/bin/golint ./v1
+          go install honnef.co/go/tools/cmd/staticcheck@latest &&
+          $HOME/go/bin/staticcheck ./...
 
   test:
     runs-on: ubuntu-latest
@@ -28,10 +31,6 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ${{ matrix.go }}
-#      - name: Install Lint
-#        run: go get -u golang.org/x/lint/golint
-#      - name: Execute Lint
-#        run: golint ./v1
       - name: Execute Test
         run: go test -v ./v1
       - name: Compile
